--- a/Week - 1/Day 2/Exercise XP/index.html
+++ b/Week - 1/Day 2/Exercise XP/index.html
@@ -30,8 +30,26 @@
             <li>tigers</li>
             <li>cougars</li>
         </ol>
-
+        <h2 style="text-align: center;">Media</h2>
+        <img src="img/cat.jpeg" alt="picture cat" class="img-cat">
     </section>
-
+    <section id="Lions">
+        <h1 class="header-cl">The lions</h1>
+        <p>Present in Africa and India, the lion typically inhabits grasslands and savannahs, but is absent in dense forests. It is usually more diurnal than other big cats, but when persecuted adapts to being active at night and at twilight. A lion pride consists of a few adult males, related females and cubs. Prides vary in size and composition from three to 20 adult lions, depending on habitat and prey availability. Females cooperate when hunting and prey mostly on large ungulates, including antelope, deer, buffalo, zebra and even giraffe</p>
+        <div class="lion-desc">
+            <p class="p-difference">The difference between Characteristics and Behavior</p>
+            <table>
+                <tr>
+                  <th>Characteristics</th>
+                  <th>Behavior</th>
+                </tr>
+                <tr>
+                  <td>The lion is a muscular, deep-chested cat with a short, rounded head, a reduced neck and round ears</td>
+                  <td>Lions spend much of their time and resting, and are inactive for about 20 hours per day.</td>
+                </tr>
+            </table>
+            <img src="img/lion.jpeg" alt="picture cat" class="img-lion">
+        </div>
+    </section>
 </body>
 </html>
