--- a/Week-1/Day-5/ExcerciseXP/index.html
+++ b/Week-1/Day-5/ExcerciseXP/index.html
@@ -9,18 +9,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">    
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Shop</title>
 </head>
 <body>
     <nav>
         <ul>
             <img src="img/logo.png" alt="" class="logo">
-            <li><a href="#ABOUT">Sign up</a></li>
-            <li><a href="#HELP">Sign in</a></li>
-            <li><a href="#CHARACTERS">Our products</a></li> 
+            <li><a href="/products.html">Our products</a></li> 
         </ul>
     </nav>
-    <div id="main"></div>
     <div class="footer">
         <p class="footer-ihfo">Kirill Lunev - 2022</a></p>
     </div>
