--- a/Week-1/Day-5/ExcerciseXP/index.html
+++ b/Week-1/Day-5/ExcerciseXP/index.html
@@ -15,7 +15,7 @@
     <nav>
         <ul>
             <img src="img/logo.png" alt="" class="logo">
-            <li><a href="/products.html">Our products</a></li> 
+            <li><a href="products.html">Our products</a></li> 
         </ul>
     </nav>
     <div class="footer">
