--- a/Week-2/Day-5/PortfolioProject/index.html
+++ b/Week-2/Day-5/PortfolioProject/index.html
@@ -70,7 +70,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="./images/about/me.jpg" alt="">
+                                <img class="img-fluid" src="img/foto.jpeg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
