--- a/Week-4/Day-2/ExerciseXP/index.html
+++ b/Week-4/Day-2/ExerciseXP/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="./Ex1.js"></script>
+    <script src="./Ex2.js"></script>
+    <script src="./Ex3.js"></script>
+    <script src="./Ex4.js"></script>
+    <script src="./Ex5.js"></script>
+    <script src="./Ex6.js"></script>
 </body>
 </html>
